--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <title>Tienda Mondongo</title>
-
-</body>
+    <header>
+        <center>
+        <h1>Tienda Mondongo</h1>
+        </center>
+        <hr>
+    </header
+<body>
 </html>
