--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,20 @@
         <h1>Tienda Mondongo</h1>
         </center>
         <hr>
-    </header
-<body>
+    </header>
+    <section>
+        <td><img height="200" width="260" src="/img/coca.jpg" alt=""></td>
+        <td><img height="200" width="260" src="/img/descargar.jfif" alt=""></td>
+        <td><img height="200" width="260" src="/img/jugo.png" alt=""></td>
+        <td><img height="200" width="260" src="/img/sabritas.png" alt=""></td>
+        <td><img height="200" width="260" src="/img/sabritas2.jfif" alt=""></td>
+    </section>
+    <footer>
+        <center>
+            <hr>
+            <p>Todos los derechos reservados.</p>
+        </center>
+        
+    </footer>
+</body>
 </html>
